--- a/git.css
+++ b/git.css
@@ -1,5 +1,6 @@
-.reveal section .column .fig,
-.reveal section .fig {
+.reveal section .fig,
+.reveal .slides section .column .fig {
+  height: 150px;
   border: none;
   box-shadow: none;
 }
