--- a/git.css
+++ b/git.css
@@ -9,7 +9,8 @@
   margin-left: 15px;
 }
 
-.center {
+.reveal section .center,
+.reveal .slides section .column .center {
   display: block;
-  margin: inherit auto;
+  margin: 0 auto;
 }
